# Limit-Order-Book-Simulator

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  analyze_results.py  bench_cancel.cpp  bench_insert.cpp  bench_match.cpp  bench_throughput.cpp
cli/: CMakeLists.txt  lob_cli.cpp
engine/: CMakeLists.txt
engine/include/lob/: event_listener.hpp  id_generator.hpp  order.hpp  order_book.hpp  order_flow_generator.hpp  price_level.hpp  trade.hpp  types.hpp
engine/src/: order_book.cpp  order_flow_generator.cpp
tests/: CMakeLists.txt
tests/fuzz/: differential_fuzzer.cpp  naive_reference_book.cpp  naive_reference_book.hpp
tests/unit/: recording_listener.hpp  test_cancel.cpp  test_events.cpp  test_market_orders.cpp  test_price_time_priority.cpp  test_self_cross.cpp
wasm/: bindings.cpp  build.sh  test.html
web/: eslint.config.mjs  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: AccountDashboard.tsx  BankruptcyModal.tsx  DepthChart.tsx  Footer.tsx  Icons.tsx  InfoTrackers.tsx  LobSimulatorApp.tsx  MarketMakerPanel.tsx  OrderBookLadder.tsx  OrderEntryPanel.tsx  OrderHistoryTable.tsx  PriceHistoryChart.tsx  ResetButton.tsx  RoleToggle.tsx  TradeTape.tsx
web/app/lib/: format.ts  types.ts  uiStyle.ts  useAccountLedger.ts  useAmbientFlow.ts  useLobEngine.ts
web/public/wasm/: lob_engine.js  lob_engine.wasm
